Start adding styling

--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,12 @@
 <body>
     <header>
         <nav>
-            <button id="home-button">Home</button>
-            <button id="menu-button">Menu</button>
-            <button id="about-button">About</button>
+            <div id="logo">Finnick's Pancake House</div>
+            <div id="nav-buttons">
+                <button id="home-button">Home</button>
+                <button id="menu-button">Menu</button>
+                <button id="about-button">About</button>
+            </div>
         </nav>
     </header>
     <div id="content"></div>
