Move image attribution footer to template

--- a/src/template.html
+++ b/src/template.html
@@ -17,5 +17,9 @@
         </nav>
     </header>
     <div id="content"></div>
+    <div id="footer">
+        <p>Pancakes image by <a href="https://pixabay.com/users/duckahouse-7364164/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3943941">DuckaHouse</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3943941">Pixabay</a>.</p>
+        <p>Syrup image by <a href="https://safesearch.pixabay.com/users/tungart7-38741244/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=9144594">Tung Lam</a> from <a href="https://safesearch.pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=9144594">Pixabay</a></p>
+    </div>
 </body>
 </html>
